--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h2 class="text-2xl font-bold text-white sm:text-3xl md:text-5xl">WLCOME TO AWOKAWOK STORE</h2>
 
       <p class="hidden max-w-lg text-white/90 md:mt-6 md:block md:text-lg md:leading-relaxed">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam quia, earum autem modi consectetur quod nostrum laboriosam alias voluptas vero veritatis. Iusto nam quibusdam modi itaque perferendis veniam in tempora?
+       hanya contoh, tidak menjual apk premium
       </p>
 
      <div class="mt-4 sm:mt-8">
